examples/test/testpolicy3248.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3248
  namespace: namespace26
spec:
  podSelector:
    matchLabels:
      key8: value49
      key30: value21
      key41: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value1
          key39: value37
      podSelector:
        matchLabels:
          key43: value25
          key19: value3
          key23: value12
